--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
         "Telegram Bot",
         "TroJanzHEX"
     ],
-    "website": "https://TroJanzHEX.me",
+    "website": "https://Villain002.me",
     "repository": "https://github.com/TroJanzHEX/Unlimited-Filter-Bot",
     "success_url": "https://telegram.dog/TroJanzHEX",
     "env": {
